--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /api/.vs/api/FileContentIndex/1dd3dde1-9800-4f46-a337-8fd21f4fa316.vsidx
 /api/api/obj/Release/net8.0/api.AssemblyInfoInputs.cache
 /api/.vs/api/FileContentIndex/064e72c9-5828-4f0c-9e6d-039031c8b256.vsidx
+/api/.vs/api/FileContentIndex/5f1c5964-6862-4930-906a-54ae1dfe7b24.vsidx
