--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 /api/api/obj/Release/net8.0/api.AssemblyInfoInputs.cache
 /api/.vs/api/FileContentIndex/064e72c9-5828-4f0c-9e6d-039031c8b256.vsidx
 /api/.vs/api/FileContentIndex/5f1c5964-6862-4930-906a-54ae1dfe7b24.vsidx
+/api/.vs/api/config/applicationhost.config
+/api/.vs/api/FileContentIndex/547760e5-da2d-4317-b944-0d8db428a74f.vsidx
+/api/api/bin/Debug/net8.0/api.staticwebassets.endpoints.json
+/api/api/bin/Debug/net8.0/Microsoft.OpenApi.dll
+/api/api/bin/Debug/net8.0
+/api/api/obj/Debug/net8.0
